panels/printers/pp-new-printer-dialog.c
@@ -229,56 +229,6 @@ emit_response (PpNewPrinterDialog *dialog,
   g_signal_emit (dialog, signals[RESPONSE], 0, response_id);
 }
 
-/*
- * Modify padding of the content area of the GtkDialog
- * so it is aligned with the action area.
- */
-static void
-update_alignment_padding (GtkWidget     *widget,
-                          GtkAllocation *allocation,
-                          gpointer       user_data)
-{
-  PpNewPrinterDialog        *dialog = (PpNewPrinterDialog *) user_data;
-  PpNewPrinterDialogPrivate *priv = dialog->priv;
-  GtkAllocation              allocation1, allocation2;
-  GtkWidget                 *action_area;
-  GtkWidget                 *content_area;
-  gint                       offset_left, offset_right;
-  guint                      padding_left, padding_right,
-                             padding_top, padding_bottom;
-
-  action_area = (GtkWidget*)
-    gtk_builder_get_object (priv->builder, "dialog-action-area1");
-  gtk_widget_get_allocation (action_area, &allocation2);
-
-  content_area = (GtkWidget*)
-    gtk_builder_get_object (priv->builder, "content-alignment");
-  gtk_widget_get_allocation (content_area, &allocation1);
-
-  offset_left = allocation2.x - allocation1.x;
-  offset_right = (allocation1.x + allocation1.width) -
-                 (allocation2.x + allocation2.width);
-
-  gtk_alignment_get_padding  (GTK_ALIGNMENT (content_area),
-                              &padding_top, &padding_bottom,
-                              &padding_left, &padding_right);
-  if (allocation1.x >= 0 && allocation2.x >= 0)
-    {
-      if (offset_left > 0 && offset_left != padding_left)
-        gtk_alignment_set_padding (GTK_ALIGNMENT (content_area),
-                                   padding_top, padding_bottom,
-                                   offset_left, padding_right);
-
-      gtk_alignment_get_padding  (GTK_ALIGNMENT (content_area),
-                                  &padding_top, &padding_bottom,
-                                  &padding_left, &padding_right);
-      if (offset_right > 0 && offset_right != padding_right)
-        gtk_alignment_set_padding (GTK_ALIGNMENT (content_area),
-                                   padding_top, padding_bottom,
-                                   padding_left, offset_right);
-    }
-}
-
 typedef struct
 {
   gchar    *server_name;
@@ -448,7 +398,6 @@ pp_new_printer_dialog_init (PpNewPrinterDialog *dialog)
 
   /* Connect signals */
   g_signal_connect (priv->dialog, "response", G_CALLBACK (new_printer_dialog_response_cb), dialog);
-  g_signal_connect (priv->dialog, "size-allocate", G_CALLBACK (update_alignment_padding), dialog);
 
   widget = (GtkWidget*)
     gtk_builder_get_object (priv->builder, "search-entry");
